# oughie-clock-rs

./: Cargo.toml  README.md  build.rs
src/: cli.rs  color.rs  config.rs  error.rs  main.rs  position.rs  segment.rs  state.rs
src/cli/: args.rs  mod.rs
src/clock/: counter.rs  mod.rs  mode.rs  time_zone.rs
