[package]
name = "clock-rs"
version = "0.1.216"
authors = ["Oughie <oughery@gmail.com>"]
description = "A modern, terminal-based digital clock"
keywords = ["clock", "terminal", "time", "cli", "date"]
categories = ["date-and-time", "command-line-interface"]
exclude = ["public/*"]
repository = "https://github.com/Oughie/clock-rs"
homepage = "https://github.com/Oughie/clock-rs"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
crossterm = "0.29.0"
dirs= "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
