[package]
name = "clock-rs"
version = "0.1.3"
authors = ["Oughie <oughery@gmail.com>"]
description = "A modern, terminal-based digital clock"
keywords = ["clock", "terminal", "time", "cli", "date"]
categories = ["date-and-time", "command-line-interface"]
exclude = ["public/*"]
repository = "https://github.com/Oughie/clock-rs"
homepage = "https://github.com/Oughie/clock-rs"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.18"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
